Fixed x overflow and some visula bugs

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   min-height: 100vh;
+  overflow-x: hidden;
   height: fit-content;
   color: white;
 
