--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -28,7 +28,7 @@
   position: relative;
 
   color: white;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
 .navbar-link:hover {
