--- a/src/components/work/TableOfContents.css
+++ b/src/components/work/TableOfContents.css
@@ -29,6 +29,8 @@
   display: inline-block;
   content: '_';
   color: white;
+
+  opacity: 0;
   width: 0;
   scale: 0;
 }
